# Rogue-Agents

./: .gitignore  ARCHITECTURE.md  DEMO.md  EXPLANATION.md  README.md  gradio_chatbot.py  main.py  main_simplified.py  output.html  output_single_old.html  pyproject.toml  requirements.txt
comicgen/: gradio_chatbot.py  main.py  main_comicgen.py  main_story_gen.py  nodes.py  utils.py
comicgen/mds/: comicgen_prompt.md
comicgen/schemas/: comicgen.py  definitions.py
comicgen/templates/: template_index.html  template_panels.html  template_story_page.html
mds/: svg_guidelines.md
src/: gradio_chatbot.py  main.py  output.html
templates/: template_panels.html
